--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "angular-auth",
   "version": "0.0.0",
   "scripts": {
+    "tauri": "tauri",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -29,6 +30,7 @@
     "@angular-devkit/build-angular": "^16.0.0",
     "@angular/cli": "~16.0.0",
     "@angular/compiler-cli": "^16.0.0",
+    "@tauri-apps/cli": "^1.3.1",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
